<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:contentDescription="@string/image_of_the_book"
        android:maxWidth="50dp"
        android:maxHeight="50dp"
        android:padding="5dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/isbn13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isbn13"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>